skate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skate
  labels:
    web: skate
spec:
  minReadySeconds: 15
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      web: skate

  template:
    metadata:
      name: skate-pod
      labels:
        web: skate
    spec:
      containers:
        - name: skate-container
          image: shaikkhajaibrahim/skateboard:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: skate-svs
spec:
  selector:
    web: skate
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
