ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-rules
  labels:
    service: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /preschool
            pathType: Prefix
            backend:
              service:
                name: pre-school-svs
                port:
                  number: 80

          - path: /skate
            pathType: Prefix
            backend:
              service:
                name: skate-svs
                port:
                  number: 80
